--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 		}
 		.blog_title {
 		  font-family: morfeta;
-		  font-size: 5%;
+		  font-size: 5vw;
 		  line-height: 83%;
 		  color: #FFFFFFFF;
 		}
 		.blog_preamble{
-			font-size: 2%;
+			font-size: 2vw;
 			color: #FFFFFFFF;
 		}
 	</style>
