--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 		}
 		.blog_title {
 		  font-family: morfeta;
-		  font-size: 5vw;
+		  font-size: clamp(10px,4vw,50px);
 		  line-height: 83%;
 		  color: #FFFFFFFF;
 		}
 		.blog_preamble{
-			font-size: 2vw;
+			font-size: clamp(5px,2vw,20px);
 			color: #FFFFFFFF;
 		}
 	</style>
