--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			background: #000000ff;
 		}
 		.blog_row {
-			margin: 15px;
+			margin: 3%;
 			float: left;
 			background: #000000ff;
 			width: 40%;
