--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
 				//console.log(titel);
 				//console.log(preamble);
 
+				var isOnDiv = false;
+				$(blog_cont).mouseenter(function(){isOnDiv=true;});
+				$(blog_cont).mouseleave(function(){isOnDiv=false;});
+
+				console.log(isOnDiv);
+				
 				buffer += `<div class = blog_cont>
 					<img src = "https://i.imgur.com/4RzXsjc.png" class = blog_img></img>
      					<div class = blog_row>
