--- a/index.html
+++ b/index.html
@@ -117,14 +117,7 @@
 			        		<div class = blog_preamble>${preamble}</div>
       					</div>
 			        </div>`
-				
-				//var element = document.getElementById("article_i");
-				//if (element.parentNode.querySelector(":hover") == element) {
-				    //Mouse is inside element
-				//} else {
-				    //Mouse is outside element
-				//}
-				
+
 				article_i++
 			}
 		}
@@ -135,6 +128,12 @@
 	
 
     </script>
+
+	<script>
+		for(let i = 0; i<article_i; i++){
+			console.log(i);	
+		}
+	</script>
 </body>
  
 </html>
