--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 				
 				
-				buffer += `<div class = blog_cont id = ${"aid" + article_i.toString}>
+				buffer += `<div class = blog_cont id = ${"aid" + article_i.toString()}>
 					<img src = "https://i.imgur.com/4RzXsjc.png" class = blog_img></img>
      					<div class = blog_row>
      						<div class = blog_title>${titel}</div>
@@ -126,7 +126,7 @@
 	    document.getElementById('blogg_inlägg').innerHTML = buffer
 
 	    for(let i = 0; i<article_i; i++){
-			const divElement = document.querySelector("aid" + i.toString);
+			const divElement = document.querySelector("aid" + i.toString());
 			
 			// Add a click event listener to the div element
 			divElement.addEventListener('click', () => {
