--- a/index.html
+++ b/index.html
@@ -126,13 +126,11 @@
 	    document.getElementById('blogg_inlägg').innerHTML = buffer
 
 	    for(let i = 0; i<article_i; i++){
-			const divElement = document.querySelector("aid" + i.toString());
-			
-			// Add a click event listener to the div element
-			divElement.addEventListener('click', () => {
-			  // Add your click event logic here
-			  console.log('The div was clicked!');
-			});
+
+			var element = document.getElementById("aid" + i.toString()); //grab the element
+			element.onclick = function(){
+				console.log("klickklick");
+			}
 		}
 	  })
 	
