--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 			var element = document.getElementById("aid" + i.toString()); //grab the element
 			element.onclick = function(){
-				console.log("klickklick");
+				console.log(i);
 			}
 		}
 	  })
