--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			var div_id = "aid" + i.toString()
 			var element = document.getElementById(div_id); //grab the element
 			element.onclick = function(){
-				document.getElementById("aid2").style.background = "#FFFFFFFF";
+				element.style.background = "#FFFFFFFF";
 			}
 		}
 	  })
