--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 			var element = document.getElementById(div_id); //grab the element
 			element.onclick = function(){
 				element.style.background = "#FFFFFFFF";
+				console.log(i)
 				console.log(div_id)
 			}
 		}
