--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			background: #010101ff;
 			margin-left: 5vw;
 			width: clamp(50px,90vw,1000px);
+			padding: 5px;
 		}
 		.blog_cont{
 			margin-bottom: 10px;
@@ -131,7 +132,7 @@
 			element.onmouseover = function(){
 				var div_id2 = "aid" + i.toString()
 				var element2 = document.getElementById(div_id2);
-				element2.style.background = "#FFFFFFFF";
+				element2.style.background = "##044827FF";
 				console.log(i)
 				console.log(div_id)
 			}
