--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			element.onmouseover = function(){
 				var div_id2 = "aid" + i.toString()
 				var element2 = document.getElementById(div_id2);
-				element2.style.background = "##044827FF";
+				element2.style.background = "#044827FF";
 				console.log(i)
 				console.log(div_id)
 			}
