--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			}
 		    	element.onclick = function(){
 				var get_string = article_index_array[i]
-				var article_index_to_open = get_string.substring(,1,get_string.length-1);
+				var article_index_to_open = get_string.substring(1,get_string.length-1);
 				console.log(article_index_to_open);
 				
 			}
