--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 				var get_string = article_index_array[i]
 				var article_index_to_open = get_string.substring(1,get_string.length-1);
 				console.log(article_index_to_open);
-				
+				window.location.href = 'http://www.google.com';
 			}
 		}
 	  })
