--- a/artikel.html
+++ b/artikel.html
@@ -18,7 +18,7 @@
             var index_in_url = url.indexOf('artikel?=') + 9
             var tag = url.substring(index_in_url,url.length())
 
-                
+            console.log(tag)
           });
           </script>
     </body>
