--- a/artikel.html
+++ b/artikel.html
@@ -16,7 +16,7 @@
             console.log(url);
 
             var index_in_url = url.indexOf('artikel?=') + 9
-            var tag = url.substring(index_in_url,url.length())
+            var tag = url.substring(index_in_url,url.length)
 
             console.log(tag)
           });
