--- a/artikel.html
+++ b/artikel.html
@@ -31,9 +31,9 @@
 
             var start_index = a_str.indexOf(tag)
               
-            var titel = content_of_tag(a_str,"titel",0);
-            var preamble = content_of_tag(a_str,"ingress",0);
-            var text = content_of_tag(a_str,"text",0);
+            var titel = content_of_tag(a_str,"titel",start_index);
+            var preamble = content_of_tag(a_str,"ingress",start_index);
+            var text = content_of_tag(a_str,"text",start_index);
               
             buffer += `<div>
                         <div>${titel}</div>
