--- a/artikel.html
+++ b/artikel.html
@@ -4,7 +4,7 @@
         <p>vilken artikel</p>
     </head>
     <body>
-        <div id="artikel">
+        <div id='artikel'>
             
         </div>
         
@@ -47,7 +47,7 @@
                 </div>`
           });
 
-            document.getElementById('blogg_inlägg').innerHTML = buffer
+            document.getElementById('artikel').innerHTML = buffer;
           </script>
     </body>
 </html>
