--- a/artikel.html
+++ b/artikel.html
@@ -38,6 +38,8 @@
             var titel = content_of_tag(a_str,"titel",start_index);
             var preamble = content_of_tag(a_str,"ingress",start_index);
             var text = content_of_tag(a_str,"text",start_index);
+
+            console.log([titel, preamble, text]);
               
             buffer += `<div>
                         <div>${titel}</div>
