--- a/artikel.html
+++ b/artikel.html
@@ -48,7 +48,7 @@
                     </div>
                 </div>`
           });
-
+            console.log(buffer);
             document.getElementById('artikel').innerHTML = buffer;
           </script>
     </body>
