--- a/artikel.html
+++ b/artikel.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <p>vilken artikel</p>
+        <style>
+            .artikel_hållare{
+                background: #000000FF;
+                align-items: center;
+                justify-content: center;
+
+                width: 1000px;
+                margin: 2 vw;
+            }
+        </style>
     </head>
     <body>
-        <div id='artikel'>
+        <div id='artikel' class = artikel_hållare>
             
         </div>
         
