--- a/artikel.html
+++ b/artikel.html
@@ -4,7 +4,7 @@
         <style>
             .artikel_hållare{
                 background: #000000FF;
-                align-items: center;
+                margin: auto;
                 justify-content: center;
 
                 width: 1000px;
