--- a/artikel.html
+++ b/artikel.html
@@ -3,11 +3,11 @@
     <head>
         <style>
             .artikel_hållare{
-                background: #000000FF;
+                background: #FFFFFFFF;
                 margin: auto;
                 justify-content: center;
 
-                width: 1000px;
+                width: clamp(100,95 vw, 1000px);
                 margin: 2 vw;
             }
         </style>
