--- a/artikel.html
+++ b/artikel.html
@@ -2,12 +2,15 @@
 <html>
     <head>
         <style>
+            body{
+                background-color: #044827FF;
+            }
             .artikel_hållare{
                 background: #FFFFFFFF;
                 margin: auto;
                 justify-content: center;
 
-                width: clamp(100,95 vw, 1000px);
+                width: clamp(100px,95 vw, 1000px);
                 margin: 2 vw;
             }
         </style>
