--- a/artikel.html
+++ b/artikel.html
@@ -7,7 +7,11 @@
             }
             .artikel_hållare{
                 background: #FFFFFFFF;
-                width: clamp(100px,95vw, 500px);
+                background: #FFFFFFFF;
+                margin: auto;
+                justify-content: center;
+
+                width: clamp(100px,95vw, 1000px);
             }
         </style>
     </head>
