--- a/artikel.html
+++ b/artikel.html
@@ -23,6 +23,9 @@
         		  font-size: clamp(10px,10vw,100px);
         		  line-height: 83%;
         		  color: #000000FF;
+
+                  margin-left: 3%;
+                  margin-top: 2%;
             }
         </style>
     </head>
@@ -71,7 +74,7 @@
               
             }
             else{
-                buffer = `<p>det är inte du det är jag, den här artikeln finns inte</p>`
+                buffer = `<div class = titel>det är inte du det är jag, den här artikeln finns inte</div>`
             }
 
             document.getElementById('artikel').innerHTML = buffer;
