--- a/artikel.html
+++ b/artikel.html
@@ -24,7 +24,7 @@
         		  line-height: 83%;
         		  color: #000000FF;
                   
-                  margin-top: 100px;
+                  padding-top: 100px;
                   margin-left: 3%;    
             }
             
