--- a/artikel.html
+++ b/artikel.html
@@ -31,11 +31,12 @@
                   margin-left: 3%;    
             }
             .ingress{
-                  font-family: tahoma;
+                  font-family: Verdana;
                   font-weight: bold;
                   
                   padding-top: 2%;
                   margin-left: 3%; 
+                  margin-right: 3%; 
                   color: #000000FF;
             }
             
