--- a/artikel.html
+++ b/artikel.html
@@ -31,7 +31,7 @@
                   margin-left: 3%;    
             }
             .ingress{
-                  font-family: Verdana;
+                  font-family: arial;
                   font-weight: bold;
                   
                   padding-top: 2%;
