--- a/artikel.html
+++ b/artikel.html
@@ -39,6 +39,14 @@
                   margin-right: 3%; 
                   color: #000000FF;
             }
+            .bröd{
+                 font-family: georgia;
+                 
+                margin-left: 3%; 
+                 margin-right: 3%;
+
+                color: #000000FF;
+            }
             
         </style>
     </head>
@@ -82,7 +90,7 @@
                 buffer = `<div>
                             <div class = titel>${titel}</div>
                             <div class = ingress>${preamble}</div>
-                             <div>${text}</div>
+                             <div class = bröd>${text}</div>
                         </div>
                     </div>`
               //console.log(buffer);
