--- a/artikel.html
+++ b/artikel.html
@@ -41,7 +41,8 @@
             }
             .bröd{
                  font-family: georgia;
-                 
+
+                padding-top: 2%;
                 margin-left: 3%; 
                  margin-right: 3%;
 
