--- a/artikel.html
+++ b/artikel.html
@@ -84,11 +84,14 @@
             var titel = content_of_tag(a_str,"titel",start_index);
             var preamble = content_of_tag(a_str,"ingress",start_index);
             var text = content_of_tag(a_str,"text",start_index);
-
+            var bild = content_of_tag(a_str,"bild",start_index);
+            var skribent = content_of_tag(a_str,"skribent",start_index);
+              
             document.title = titel;
               
             if(start_index != -1){
                 buffer = `<div>
+                            <img src = ${titel}></img>
                             <div class = titel>${titel}</div>
                             <div class = ingress>${preamble}</div>
                              <div class = bröd>${text}</div>
