--- a/artikel.html
+++ b/artikel.html
@@ -91,7 +91,7 @@
               
             if(start_index != -1){
                 buffer = `<div>
-                            <img src = ${titel}></img>
+                            <img src = ${bild}></img>
                             <div class = titel>${titel}</div>
                             <div class = ingress>${preamble}</div>
                              <div class = bröd>${text}</div>
