--- a/artikel.html
+++ b/artikel.html
@@ -45,7 +45,7 @@
                 padding-top: 2%;
                 margin-left: 3%; 
                  margin-right: 3%;
-
+                padding-down: 5%;
                 color: #000000FF;
             }
             .blogg_bild{
