--- a/artikel.html
+++ b/artikel.html
@@ -16,6 +16,7 @@
             .artikel_hållare{
                 background: #FFFFFFFF;
                 background: #FFFFFFFF;
+                margin-top: 15px
                 margin: auto;
                 justify-content: center;
 
@@ -45,7 +46,7 @@
                 padding-top: 2%;
                 margin-left: 3%; 
                  margin-right: 3%;
-                padding-down: 15px;
+                padding-bottom: 25px;
                 color: #000000FF;
             }
             .blogg_bild{
