--- a/artikel.html
+++ b/artikel.html
@@ -15,8 +15,7 @@
             }
             .artikel_hållare{
                 background: #FFFFFFFF;
-                background: #FFFFFFFF;
-                margin-top: 15px
+                margin-top: 15px;
                 margin: auto;
                 justify-content: center;
 
