--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<style>
 		@font-face {
 		  font-family: newsagent;
-		  src: url(Newsagent-Regular.ttf) format("truetype");
+		  src: url(font/Newsagent-Regular.ttf) format("truetype");
 		}
 		@font-face {
 		  font-family: morfeta;
-		  src: url(MorfetaGealmord-5158V.otf) format("opentype");
+		  src: url(font/MorfetaGealmord-5158V.otf) format("opentype");
 		}
 		
 		body{
