--- a/artikel.html
+++ b/artikel.html
@@ -5,7 +5,7 @@
         <style>
             @font-face {
     		  font-family: morfeta;
-    		  src: url(MorfetaGealmord-5158V.otf) format("opentype");
+    		  src: url(font/MorfetaGealmord-5158V.otf) format("opentype");
     		}
 
             
