--- a/index.html
+++ b/index.html
@@ -79,12 +79,15 @@
 			.then(function(resp){
 
 				var a_str = resp;
-
+				
+				var titel = content_of_tag(a_str,"titel",0);
+				var ingress = content_of_tag(a_str,"ingress",0);
+				
 				var new_html = `<div class = blog_cont>
 					<img src = "https://i.imgur.com/4RzXsjc.png" class = blog_img></img>
      					<div class = blog_row>
-     						<div class = blog_title>${article_name}</div>
-			        		<div class = blog_preamble>ingressen ska vara här</div>
+     						<div class = blog_title>${titel}</div>
+			        		<div class = blog_preamble>${ingress}</div>
       					</div>
 			        </div>`
 
