--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	</script>
     <div id ='blogg_inlägg' class = blog_area>
 	<div id = 'main1'><script>draw_article_button('main1','rostiga-roadtrips')</script></div>
-	<div id = 'main2'><script>draw_article_button('main2','rostiga-roadtrips')</script></div>
+	<div id = 'main2'><script>draw_article_button('main2','hawaiiskjortan')</script></div>
 	<div id = 'main3'><script>draw_article_button('main3','rostiga-roadtrips')</script></div>
 	    
     </div>
