--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				element2.style.background = "#000000FF";
 			}
 		    	element.onclick = function(){
-				console.log(article_index_to_open);
+				console.log(article_name);
 				open_article(article_name)
 			}
 		}
