--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 				element.onmouseover = function(){
 					var element2 = document.getElementById(div_id);
 					element2.style.background = "#044827FF";
+					console.log("nudd");
 				}
 			    	element.onmouseout = function(){
 					var element2 = document.getElementById(div_id);
