--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 	</script>
 	
     	<div id ='blogg_inlägg' class = blog_area>
-		<div id = 'main1'><script>draw_article_button('main1','rostiga-roadtrips')</script></div>
-		<div id = 'main2'><script>draw_article_button('main2','hawaiiskjortan')</script></div>
-		<div id = 'main3'><script>draw_article_button('main3','rostiga-roadtrips')</script></div>   
+		<div id = 'main1' class = blog_cont><script>draw_article_button('main1','rostiga-roadtrips')</script></div>
+		<div id = 'main2' class = blog_cont><script>draw_article_button('main2','hawaiiskjortan')</script></div>
+		<div id = 'main3' class = blog_cont><script>draw_article_button('main3','rostiga-roadtrips')</script></div>   
 	 </div>
     <!-- <iframe id="game-iframe" src="https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld" width="600" height="500" title="drakens-varld"></iframe> -->
 
