--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				var titel = content_of_tag(a_str,"titel",0).toUpperCase();
 				var ingress = content_of_tag(a_str,"ingress",0);
 				
-				var new_html = `<div class = blog_cont>
+				var new_html = `<div>
 					<img src = "https://i.imgur.com/4RzXsjc.png" class = blog_img></img>
      					<div class = blog_row>
      						<div class = blog_title>${titel}</div>
