--- a/index.html
+++ b/index.html
@@ -83,12 +83,14 @@
 				
 				var titel = content_of_tag(a_str,"titel",0).toUpperCase();
 				var ingress = content_of_tag(a_str,"ingress",0);
+				var skribent = content_of_tag(a_str,"skribent",0);
+				var bild = content_of_tag(a_str,"bild",0);
 				
 				var new_html = `<div>
-					<img src = "https://i.imgur.com/4RzXsjc.png" class = blog_img></img>
+					<img src = bild class = blog_img id = 'bild' + article_name></img>
      					<div class = blog_row>
-     						<div class = blog_title>${titel}</div>
-			        		<div class = blog_preamble>${ingress}</div>
+     						<div class = blog_title id = 'titel' + article_name>${titel}</div>
+			        		<div class = blog_preamble id = 'ingress' + article_name>${ingress}</div>
       					</div>
 			        </div>`
 
