--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				console.log(bild);
 				
 				var new_html = `<div>
-					<img src = bild class = blog_img id = 'bild' + article_name></img>
+					<img src = bild class = blog_img id = ${bild} + article_name></img>
      					<div class = blog_row>
      						<div class = blog_title id = 'titel' + article_name>${titel}</div>
 			        		<div class = blog_preamble id = 'ingress' + article_name>${ingress}</div>
