--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				var bild = content_of_tag(a_str,"bild",0);
 				
 				var new_html = `<div>
-					<img src = bild class = blog_img id = ${bild} + article_name></img>
+					<img src = ${bild} class = blog_img id = 'bild' + article_name></img>
      					<div class = blog_row>
      						<div class = blog_title id = 'titel' + article_name>${titel}</div>
 			        		<div class = blog_preamble id = 'ingress' + article_name>${ingress}</div>
