--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
 					var titel_el = document.getElementById('titel'+article_name);
 					var ingress_el = document.getElementById('ingress'+article_name);
-					titel_el.style.color = "#FFFFFFFF"
-					ingress_el.style.color = "#FFFFFFFF"
+					titel_el.style.color = "#FFFFFFFF";
+					ingress_el.style.color = "#FFFFFFFF";
 				}
 			    	element.onmouseout = function(){
 					var element2 = document.getElementById(div_id);
@@ -112,8 +112,8 @@
 
 					var titel_el = document.getElementById('titel'+article_name);
 					var ingress_el = document.getElementById('ingress'+article_name);
-					titel_el.style.color = "#000000FF"
-					ingress_el.style.color = "#000000FF"
+					titel_el.style.color = "#000000FF";
+					ingress_el.style.color = "#000000FF";
 				}
 			    	element.onclick = function(){
 					console.log(article_name);
