--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		    clear: both;
 		}
 		.blog_title {
+		  padding-top: 1%;
 		  font-family: morfeta;
 		  font-size: clamp(10px,4vw,50px);
 		  line-height: 83%;
