--- a/artikel.html
+++ b/artikel.html
@@ -94,7 +94,7 @@
             var buffer = ``   
             
             if(titel == -1 && preamble == -1){
-                buffer = `<div class = titel>Det är inte du det är jag</div><div class = ingress>Den här artikeln finns inte, är du ledsen över detta så hör av dig på gaffel.magasin@gmail.com<br></div>`
+                buffer = `<div class = titel>404 Det är inte du det är jag</div><div class = ingress>Den här artikeln finns inte, är du ledsen över detta så hör av dig på gaffel.magasin@gmail.com<br></div>`
                 document.title = 'o_o';
             }
             else{
