--- a/artikel.html
+++ b/artikel.html
@@ -100,7 +100,7 @@
                 buffer = `<div>
                             <img src = ${bild} class = blogg_bild></img>
                             <div class = titel>${titel}</div>
-                            <div class = ingress>${preamble}</div>
+                            <div class = ingress>${preamble}<br></div>
                         </div>
                     </div>`
            
