--- a/artikel.html
+++ b/artikel.html
@@ -47,6 +47,7 @@
             }
 
             .bröd{
+                margin-top: 1vw;
                 margin-left: 5%; 
                 margin-right: 5%; 
             }
@@ -100,7 +101,7 @@
                 buffer = `<div>
                             <img src = ${bild} class = blogg_bild></img>
                             <div class = titel>${titel}</div>
-                            <div class = ingress>${preamble}<br></div>
+                            <div class = ingress>${preamble}</div>
                         </div>
                     </div>`
            
