--- a/artikel.html
+++ b/artikel.html
@@ -47,7 +47,7 @@
             }
 
             .bröd{
-                margin-top: 1vw;
+                margin-top: 10px;
                 margin-left: 5%; 
                 margin-right: 5%; 
             }
