--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
  
 <body>
-	<iframe src = 'header.html'></iframe>
+	<iframe src = 'header.html' width="100%" height="300" margin = "0px"></iframe>
 
 	
 	<script>
