--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 		
 		body{
 			background-color: #044827FF;
+			
+			margin: 0px;
+			padding: 0px;
+			    
 		}
 		
 		.blog_area{
@@ -60,7 +64,7 @@
 </head>
  
 <body>
-	<iframe src = 'header.html' width="100%" height="300" margin = "0px"></iframe>
+	<iframe src = 'header.html' width="100%" height="50px" margin = "0px"></iframe>
 
 	
 	<script>
