--- a/header.html
+++ b/header.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <style>
+        body{
+            margin: 0px;
+            padding: 0px;
+        }
+            
         /* Add a black background color to the top navigation */
         .topnav {
           background-color: #333;
@@ -35,9 +40,9 @@
     <body>
         <div class="topnav">
           <a class="active" href="#home">Home</a>
-          <a href="#news">News</a>
-          <a href="#contact">Contact</a>
-          <a href="#about">About</a>
+          <a href="#news">HEM</a>
+          <a href="#contact">STUDIO G</a>
+          <a href="#about">OM</a>
         </div>
     </body>
 </html>
