--- a/header.html
+++ b/header.html
@@ -39,10 +39,9 @@
     </head>
     <body>
         <div class="topnav">
-          <a class="active" href="#home">Home</a>
-          <a href="#news">HEM</a>
-          <a href="#contact">STUDIO G</a>
-          <a href="#about">OM</a>
+          <a href=index.html>HEM</a>
+          <a href=studio-g.html>STUDIO G</a>
+          <a href=om.html>OM</a>
         </div>
     </body>
 </html>
