--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
  
 <body>
 	
-
+	<div id = 'web-header'><script> 
+		fetch('header.html')
+			.then(function(resp){return resp.text()})
+			.then(function(resp){
+				document.getElementById('web-header').innerHTML = resp;
+			});
+		
+	</script></div>
 	
 	<script>
 		function open_article(str){
