--- a/header.html
+++ b/header.html
@@ -43,5 +43,10 @@
           <a href=studio-g.html>STUDIO G</a>
           <a href=om.html>OM</a>
         </div>
+        <div class="topnav">
+          <a href=index.html>HEM</a>
+          <a href=studio-g.html>STUDIO G</a>
+          <a href=om.html>OM</a>
+        </div>
     </body>
 </html>
