--- a/header.html
+++ b/header.html
@@ -42,11 +42,11 @@
           <a href=index.html>HEM</a>
           <a href=studio-g.html>STUDIO G</a>
           <a href=om.html>OM</a>
-        </div>
-        <div class="topnav">
+          <p>GAFFEL</p>
           <a href=index.html>HEM</a>
           <a href=studio-g.html>STUDIO G</a>
-          <a href=om.html>OM</a>
+          <a href=om.html>OM</a>   
         </div>
+        
     </body>
 </html>
