--- a/header.html
+++ b/header.html
@@ -34,13 +34,16 @@
           background-color: #04AA6D;
           color: white;
         }
+        .topnav p {color: white}
           
         </style>
     </head>
     <body>
         <div class="topnav">
+          <p>GAFFEL</p>
           <a href=index.html>HEM</a>
           <a href=studio-g.html>STUDIO G</a>
+          <p>GAFFEL</p>
           <a href=om.html>OM</a>
           <a href=index.html>HEM</a>
           <a href=studio-g.html>STUDIO G</a>
