--- a/header.html
+++ b/header.html
@@ -34,7 +34,7 @@
           background-color: #04AA6D;
           color: white;
         }
-        .topnav p {color: white}
+        .topnav p {color: white display:inline}
           
         </style>
     </head>
