--- a/header.html
+++ b/header.html
@@ -34,7 +34,10 @@
           background-color: #04AA6D;
           color: white;
         }
-        .topnav p {color: white display:inline}
+        .topnav p {
+            color: white;
+            display:inline;
+        }
           
         </style>
     </head>
