--- a/header.html
+++ b/header.html
@@ -21,6 +21,7 @@
           padding: 14px 16px;
           text-decoration: none;
           font-size: 17px;
+            display:inline;
         }
         
         /* Change the color of links on hover */
