--- a/header.html
+++ b/header.html
@@ -11,6 +11,7 @@
         .topnav {
           background-color: black;
           overflow: hidden;
+          display: inline-block
         }
         
         /* Style the links inside the navigation bar */
