--- a/header.html
+++ b/header.html
@@ -23,7 +23,10 @@
           text-decoration: none;
           font-size: 17px;
         }
-        
+        .topnav p{
+            color: white;
+        }
+            
         /* Change the color of links on hover */
         .topnav a:hover {
           background-color: white;
@@ -44,7 +47,7 @@
             <div width = "50px"></div>
           <a href=index.html>HEM</a>
           <a href=studio-g.html>STUDIO G</a>
-            <div width = "50px"></div>
+          <p>hej</p>
           <a href=om.html>OM</a>
           <a href=index.html>HEM</a>
           <a href=studio-g.html>STUDIO G</a>
