--- a/header.html
+++ b/header.html
@@ -37,6 +37,7 @@
         .topnav a.active {
           background-color: #04AA6D;
           color: white;
+            style: inline;
         }
  
           
