--- a/header.html
+++ b/header.html
@@ -25,6 +25,7 @@
         }
         .topnav p{
             color: white;
+            style: inline;
         }
             
         /* Change the color of links on hover */
