--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
         }
         .topnav p{
             color: white;
-            style: inline;
+            display: inline;
         }
             
         /* Change the color of links on hover */
