--- a/header.html
+++ b/header.html
@@ -24,6 +24,8 @@
           font-size: 17px;
         }
         .topnav p{
+            float: left;
+            text-align: center;
             color: white;
             display: inline;
         }
