--- a/header.html
+++ b/header.html
@@ -48,11 +48,11 @@
     <body>
         <div class="topnav">
           <div style = "width: 50px"></div>
-          <a href=index.html style float: left;>HEM</a>
+          <a href=index.html style = "float: left">HEM</a>
 
           <p>hej</p>
 
-          <a href=om.html>OM</a>   
+          <a href=om.html <div style = "width: 50px"></div>>OM</a>   
         <div style = "width: 50px"></div>
           
         </div>
