--- a/header.html
+++ b/header.html
@@ -52,7 +52,8 @@
 
           <p>hej</p>
 
-          <a href=om.html <div style = "width: 50px"></div>>OM</a>   
+          <a href=om.html style = "float: left"></div>>OM</a>
+        <a href=om.html style = "float: right"></div>>OM</a>  
         <div style = "width: 50px"></div>
           
         </div>
