--- a/header.html
+++ b/header.html
@@ -10,6 +10,7 @@
         .head_div{
             width: 100%;
             height: 50px;
+            background: black;
         }
             
         </style>
