--- a/header.html
+++ b/header.html
@@ -11,6 +11,10 @@
             width: 100%;
             height: 50px;
             background: black;
+            display: inline;
+        }
+        p{
+            color: white;
         }
             
         </style>
@@ -18,6 +22,8 @@
     <body>
         <div class = head_div>
             <p>Gaffel</p>
+            <p>Gaffel1</p>
+            <p>Gaffel2</p>
         </div>
     </body>
 </html>
