--- a/header.html
+++ b/header.html
@@ -13,17 +13,18 @@
             background: black;
             display: inline;
         }
-        p{
+        head_cont{
             color: white;
+            display: inline;
         }
             
         </style>
     </head>
     <body>
         <div class = head_div>
-            <p>Gaffel</p>
-            <p>Gaffel1</p>
-            <p>Gaffel2</p>
+            <p class = head_cont>Gaffel</p>
+            <p class = head_cont>Gaffel1</p>
+            <p class = head_cont>Gaffel2</p>
         </div>
     </body>
 </html>
