--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
             background: black;
             display: inline;
         }
-        head_cont{
+        .head_cont{
             color: white;
             display: inline;
         }
