--- a/header.html
+++ b/header.html
@@ -15,7 +15,7 @@
         }
         .head_cont{
             color: white;
-            
+            display: inline-block;
         }
             
         </style>
