--- a/header.html
+++ b/header.html
@@ -7,11 +7,19 @@
             padding: 0px;
         }
 
-        .head_div{
+        .head_divt{
             width: 100%;
             height: 50px;
             background: black;
             display: inline-block;
+        }
+        .left_div{
+            margin: auto;
+            margin-left: 0px;
+        }
+        .right_div{
+            margin: auto;
+            margin-right: 0px;
         }
         .head_cont{
             color: white;
@@ -22,9 +30,16 @@
     </head>
     <body>
         <div class = head_div>
+            <div class = left_div>
             <p class = head_cont>Gaffel</p>
             <p class = head_cont>Gaffel1</p>
             <p class = head_cont>Gaffel2</p>
+            </div> 
+            <div class = right_div>
+            <p class = head_cont>Gaffel</p>
+            <p class = head_cont>Gaffel1</p>
+            <p class = head_cont>Gaffel2</p>
+            </div> 
         </div>
     </body>
 </html>
