--- a/header.html
+++ b/header.html
@@ -16,10 +16,12 @@
         .left_div{
             margin: auto;
             margin-left: 0px;
+            display: inline-block;
         }
         .right_div{
             margin: auto;
             margin-right: 0px;
+            display: inline-block;
         }
         .head_cont{
             color: white;
