--- a/header.html
+++ b/header.html
@@ -15,12 +15,12 @@
         }
         .left_div{
             margin: auto;
-            margin-left: 0px;
+            float: left;
             display: inline-block;
         }
         .right_div{
             margin: auto;
-            margin-right: 0px;
+            float: right;
             display: inline-block;
         }
         .head_cont{
