--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
             padding: 0px;
         }
 
-        .head_divt{
+        .head_div{
             width: 100%;
             height: 50px;
             background: black;
