--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
             width: 100%;
             height: 50px;
             background: black;
-            display: inline-flex;
+            display: inline-block;
         }
         .left_div{
             margin: auto;
