--- a/header.html
+++ b/header.html
@@ -17,11 +17,13 @@
             margin: auto;
             float: left;
             display: inline-block;
+            background: red;
         }
         .right_div{
             margin: auto;
             float: right;
             display: inline-block;
+            background: blue;
         }
         .head_cont{
             color: white;
