--- a/header.html
+++ b/header.html
@@ -15,6 +15,7 @@
         }
         .left_div{
             margin: auto;
+            margin-left: 5vw;
             float: left;
             display: inline-block;
         }
