--- a/header.html
+++ b/header.html
@@ -38,6 +38,11 @@
             <p class = head_cont>Gaffel1</p>
             <p class = head_cont>Gaffel2</p>
             </div> 
+            <div class = left_div>
+            <p class = head_cont>Gaffel</p>
+            <p class = head_cont>Gaffel1</p>
+            <p class = head_cont>Gaffel2</p>
+            </div> 
             <div class = right_div>
             <p class = head_cont>Gaffel</p>
             <p class = head_cont>Gaffel1</p>
