--- a/header.html
+++ b/header.html
@@ -34,7 +34,9 @@
     <body>
         <div class = head_div>
             <div class = left_div>
-            <p class = head_cont>Gaffel</p>
+            <a href="default.asp">
+              <img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:50px;height:50px;">
+            </a>
             <p class = head_cont>Gaffel1</p>
             <p class = head_cont>Gaffel2</p>
             </div> 
