--- a/header.html
+++ b/header.html
@@ -24,6 +24,9 @@
             float: right;
             display: inline-block;
         }
+        .logga{
+            display:inline-block;
+        }
         .head_cont{
             color: white;
             display: inline-block;
@@ -34,7 +37,7 @@
     <body>
         <div class = head_div>
             <div class = left_div>
-            <a href="default.asp">
+            <a href="default.asp" class = logga>
               <img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:50px;height:50px;">
             </a>
             <p class = head_cont>Gaffel1</p>
