--- a/header.html
+++ b/header.html
@@ -37,9 +37,11 @@
     <body>
         <div class = head_div>
             <div class = left_div>
-            <a href="default.asp" class = logga>
+            <a href="" class = logga>
               <img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:50px;height:50px;">
             </a>
+            </div> 
+            <div class = left_div>
             <p class = head_cont>Gaffel1</p>
             <p class = head_cont>Gaffel2</p>
             </div> 
