--- a/header.html
+++ b/header.html
@@ -30,6 +30,7 @@
         .head_cont{
             color: white;
             display: inline-block;
+            text-align: center;
         }
             
         </style>
@@ -37,7 +38,7 @@
     <body>
         <div class = head_div>
             <div class = left_div>
-            <a href="" class = logga>
+            <a href="index.html" class = logga>
               <img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:50px;height:50px;">
             </a>
             </div> 
