--- a/header.html
+++ b/header.html
@@ -30,7 +30,7 @@
         .head_cont{
             color: white;
             display: inline-block;
-            text-align: center;
+            text-align: left;
         }
             
         </style>
