--- a/header.html
+++ b/header.html
@@ -28,9 +28,8 @@
             display:inline-block;
         }
         .head_cont{
-            color: white;
+            color: green;
             display: inline-block;
-            text-align: left;
         }
             
         </style>
