--- a/header.html
+++ b/header.html
@@ -29,7 +29,8 @@
         }
         .head_cont{
             color: green;
-            display: inline-block;
+            text-align: center;
+            display: inline;
         }
             
         </style>
