--- a/header.html
+++ b/header.html
@@ -30,7 +30,9 @@
         .head_cont{
             color: green;
             text-align: center;
+            vertical-align: middle;
             display: inline;
+            
         }
             
         </style>
