--- a/header.html
+++ b/header.html
@@ -14,12 +14,14 @@
             display: inline-block;
         }
         .left_div{
+            background: red;
             margin: auto;
             margin-left: 5vw;
             float: left;
             display: inline-block;
         }
         .right_div{
+            background: red;
             margin: auto;
             float: right;
             display: inline-block;
@@ -28,7 +30,9 @@
             display:inline-block;
         }
         .head_cont{
+            background: white;
             color: green;
+            height: 100%;
             text-align: center;
             vertical-align: middle;
             display: inline;
