--- a/header.html
+++ b/header.html
@@ -19,12 +19,14 @@
             margin-left: 5vw;
             float: left;
             display: inline-block;
+            height: 100%;
         }
         .right_div{
             background: red;
             margin: auto;
             float: right;
             display: inline-block;
+            height: 100%;
         }
         .logga{
             display:inline-block;
